<resources>
    <string name="ss_regular">sans-serif</string>
    <string name="ss_medium">sans-serif-medium</string>
    <string name="ss_condensed">sans-serif-condensed</string>

    <string name="app_name">Зарипов Максим</string>
    <string name="hint1">Мобильный</string>
    <string name="hint2">E-mail</string>
    <string name="hint3">Профиль в VK</string>
    <string name="hint4">Репозиторий</string>
    <string name="hint5">О себе</string>
    <string name="phone">+7 (917) 971-11-11</string>
    <string name="email">maksimandr@yandex.ru</string>
    <string name="vk">vk.com/zaripovmaksim</string>
    <string name="git">github.com/Maksimandr/DevIntensive</string>
    <string name="bio">Через двадцать лет вы будете более сожалеть о том, чего НЕ СДЕЛАЛИ, чем о том, что вы СДЕЛАЛИ. Поэтому, отбросьте сомнения. Уплывайте прочь от безопасной гавани. Поймайте попутный ветер своими парусами. Исследуйте. Мечтайте. Открывайте. Марк Твен.</string>
    <string name="just_launch">активити запускается впервые</string>
    <string name="already_launched">активити уже создавалось</string>
    <string name="menu_my_profile">Мой профиль</string>
    <string name="user_name">Зарипов Максим</string>
    <string name="menu_team">Команда</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_stat.rating.txt">Рейтинг</string>
    <string name="user_stat.rating">5</string>
    <string name="user_stat.code.lines.txt">Написано строк кода</string>
    <string name="user_stat.code.lines">5</string>
    <string name="user_stat.projects.txt">Проектов</string>
    <string name="user_stat.projects">5</string>
    <string name="user_profile.dialog.gallery">Загрузить из галлереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.chooser.message">Выберите фото</string>
    <string name="permition_request.message">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="permition_request.button">Разрешить</string>
    <string name="login_txt">ВОЙТИ</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Пароль</string>
    <string name="login_button">ВОЙТИ</string>
    <string name="login_remind_password">Забыли пароль?</string>
    <string name="check_input.phone.symbols">Допустимые символы: 0-9, +, -, (, ), пробел</string>
    <string name="check_input.phone.length">Длина номера телефона от 11 до 20 символов</string>
    <string name="check_input.email">Минимальное число символов перед @ - 3, перед точкой - 2, домен - 2</string>
    <string name="check_input.vk">Адрес должен начинаться с vk.com/</string>
    <string name="check_input.git">Адрес должен начинаться с github.com/</string>
    <string name="url_vk.com">vk.com/</string>
    <string name="url_github.com">github.com/</string>
    <string name="check_input.vk.nopage">Укажите свою страницу VK</string>
    <string name="check_input.git.norepo">Укажите свой репозиторий в GIT</string>
    <string name="more_info_btn">Просмотр</string>
    <string name="toolbar_search.user">Поиск пользователя</string>
    <string name="toolbar_search.hint">Введите имя пользователя</string>

</resources>
