<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll"
    style="@style/mpwc"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        style="@style/mpwc"
        android:orientation="vertical">

        <LinearLayout
            style="@style/mpwc"
            android:layout_marginTop="@dimen/space_16"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_phone_black_24dp"/>

            <LinearLayout
                style="@style/data_cont"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    style="@style/mpwc">

                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/data"
                        android:hint="@string/hint1"
                        android:inputType="phone"
                        android:text="@string/phone"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/phone_iv"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_1"
            android:layout_marginLeft="@dimen/space_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            style="@style/mpwc"
            android:layout_marginTop="@dimen/space_16"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                style="@style/data_cont"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    style="@style/mpwc">

                    <EditText
                        android:id="@+id/email_et"
                        style="@style/data"
                        android:hint="@string/hint2"
                        android:inputType="textEmailAddress"
                        android:text="@string/email"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/email_iv"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_1"
            android:layout_marginLeft="@dimen/space_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            style="@style/mpwc"
            android:layout_marginTop="@dimen/space_16"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk"/>

            <LinearLayout
                style="@style/data_cont"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    style="@style/mpwc">

                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/data"
                        android:hint="@string/hint3"
                        android:inputType="textUri"
                        android:text="@string/vk"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/vk_iv"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_1"
            android:layout_marginLeft="@dimen/space_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            style="@style/mpwc"
            android:layout_marginTop="@dimen/space_16"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/git"/>

            <LinearLayout
                style="@style/data_cont"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    style="@style/mpwc">

                    <EditText
                        android:id="@+id/git_et"
                        style="@style/data"
                        android:hint="@string/hint4"
                        android:inputType="textUri"
                        android:text="@string/git"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/git_iv"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_1"
            android:layout_marginLeft="@dimen/space_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            style="@style/mpwc"
            android:layout_marginTop="@dimen/space_16"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                style="@style/data_cont"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    style="@style/mpwc">

                    <EditText
                        android:id="@+id/bio_et"
                        style="@style/data"
                        android:hint="@string/hint5"
                        android:inputType="textMultiLine"
                        android:text="@string/bio"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>