<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_bg"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:visibility="visible">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/login_form"
        style="@style/login_form"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            style="@style/login_title"
            android:text="@string/login_title"
            android:textSize="@dimen/font_20"/>

        <android.support.design.widget.TextInputLayout
            style="@style/login_input">

            <EditText
                style="@style/login_ed"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"
                android:text="Softdesign@mail.ru"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/login_input">

            <EditText
                style="@style/login_ed"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/space_24"
                android:hint="@string/login_password"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/login_button"
            style="@style/login_button"
            android:background="@drawable/rectangle_rounded"
            android:text="@string/login_button"/>

        <TextView
            style="@style/login_reminder"
            android:text="@string/login_remind_password"/>

    </LinearLayout>

</RelativeLayout>