<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.activities.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_112"
                android:background="@color/grey"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/info"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/info.num"
                        android:text="5"/>

                    <TextView
                        style="@style/info.txt"
                        android:text="Рейтинг"/>
                </LinearLayout>

                <View
                    style="@style/v_line"
                    android:background="@color/grey_light"/>

                <LinearLayout
                    style="@style/info"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/info.num"
                        android:text="5"/>

                    <TextView
                        style="@style/info.txt"
                        android:text="Написано строк кода"/>
                </LinearLayout>

                <View
                    style="@style/v_line"
                    android:background="@color/grey_light"/>

                <LinearLayout
                    style="@style/info"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/info.num"
                        android:text="5"/>

                    <TextView
                        style="@style/info.txt"
                        android:text="Проектов"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_phone_black_24dp"/>

                <LinearLayout
                    style="@style/data_cont"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/data"
                            android:hint="@string/hint1"
                            android:text="@string/mobile"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_1"
                android:layout_marginLeft="@dimen/space_72"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"/>

                <LinearLayout
                    style="@style/data_cont"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/data"
                            android:hint="@string/hint2"
                            android:text="@string/email"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_1"
                android:layout_marginLeft="@dimen/space_72"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/vk"/>

                <LinearLayout
                    style="@style/data_cont"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/data"
                            android:hint="@string/hint3"
                            android:text="@string/vk"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_1"
                android:layout_marginLeft="@dimen/space_72"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/git"/>

                <LinearLayout
                    style="@style/data_cont"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/data"
                            android:hint="@string/hint4"
                            android:text="@string/github"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_1"
                android:layout_marginLeft="@dimen/space_72"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_circle_black_24dp"/>

                <LinearLayout
                    style="@style/data_cont"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/data"
                            android:inputType="textMultiLine"
                            android:hint="@string/hint5"
                            android:text="@string/aboutself"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
