<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_8"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:id="@+id/user_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/userphoto"
                app:aspect_ratio="1.78"/>

            <TextView
                android:id="@+id/user_full_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@string/ss_medium"
                android:paddingBottom="@dimen/space_24"
                android:paddingLeft="@dimen/space_16"
                android:paddingRight="@dimen/space_16"
                android:text="Фамилия Имя"
                android:textColor="@color/white"
                android:textSize="@dimen/font_24"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_72"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <LinearLayout
                style="@style/info"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rating_txt"
                    style="@style/info.num"
                    android:textColor="@color/black"
                    android:text="@string/user_stat.rating"/>

                <TextView
                    style="@style/info.txt"
                    android:textColor="@color/black"
                    android:text="@string/user_stat.rating.txt"/>
            </LinearLayout>

            <LinearLayout
                style="@style/info"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/code_lines_txt"
                    style="@style/info.num"
                    android:textColor="@color/black"
                    android:text="@string/user_stat.code.lines"/>

                <TextView
                    style="@style/info.txt"
                    android:textColor="@color/black"
                    android:text="@string/user_stat.code.lines.txt"/>
            </LinearLayout>

            <LinearLayout
                style="@style/info"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projects_txt"
                    style="@style/info.num"
                    android:textColor="@color/black"
                    android:text="@string/user_stat.projects"/>

                <TextView
                    style="@style/info.txt"
                    android:textColor="@color/black"
                    android:text="@string/user_stat.projects.txt"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/bio_txt"
            style="@style/bio_txt"
            android:maxLines="3"
            android:text="@string/bio"/>

        <View
            style="@style/h_line"/>

        <Button
            android:id="@+id/more_info_btn"
            style="@style/more_info_btn"
            android:text="@string/more_info_btn"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
